true telnet-like input handling

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,9 @@
                 <span id="connection-status" class="disconnected">Disconnected</span>
             </div>
         </div>
-        <div id="terminal-output" class="terminal-output"></div>
-        <div class="terminal-input-line">
-            <span class="prompt">&gt;</span>
-            <input id="terminal-input" type="text" autocomplete="off" autofocus>
+        <div id="terminal-output" class="terminal-output" tabindex="0">
+            <!-- Terminal output will be displayed here -->
+            <!-- The cursor will be displayed here too -->
         </div>
     </div>
     <script src="client.js"></script>
