--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Emulator</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Add Socket.IO client script -->
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <div class="terminal-container">
