--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             <span>WebSocket Terminal Client</span>
             <div class="status">
                 <span id="connection-status" class="disconnected">Disconnected</span>
+                <a href="/admin" class="admin-link" title="Admin Dashboard">Admin</a>
             </div>
         </div>
         <div id="terminal-output" class="terminal-output" tabindex="0">
