--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUD Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-dark text-light">
@@ -38,49 +38,50 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card bg-dark border-secondary mb-3">
-                        <div class="card-header bg-secondary text-white">
-                            <h5>Server Status</h5>
+                        <div class="card-header bg-secondary text-white d-flex align-items-center">
+                            <i class="bi bi-server me-2"></i>
+                            <h5 class="mb-0">Server Performance</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Status</label>
+                                        <label class="form-label text-muted small text-uppercase">Server Status</label>
                                         <div><span class="badge bg-success" id="server-status">Online</span></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Uptime</label>
-                                        <div id="server-uptime">-</div>
+                                        <label class="form-label text-muted small text-uppercase">System Uptime</label>
+                                        <div id="server-uptime" class="fs-5">-</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Connected Clients</label>
-                                        <div id="connected-clients">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Active Clients</label>
+                                        <div id="connected-clients" class="fs-5">-</div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Authenticated Users</label>
-                                        <div id="authenticated-users">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Logged-in Users</label>
+                                        <div id="authenticated-users" class="fs-5">-</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Total Connections</label>
-                                        <div id="total-connections">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Total Connections</label>
+                                        <div id="total-connections" class="fs-5">-</div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Total Commands</label>
-                                        <div id="total-commands">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Commands Processed</label>
+                                        <div id="total-commands" class="fs-5">-</div>
                                     </div>
                                 </div>
                             </div>
@@ -88,53 +89,66 @@
                     </div>
 
                     <div class="card bg-dark border-secondary mb-3">
-                        <div class="card-header bg-secondary text-white">
-                            <h5>Memory Usage</h5>
+                        <div class="card-header bg-secondary text-white d-flex align-items-center">
+                            <i class="bi bi-cpu me-2"></i>
+                            <h5 class="mb-0">Resource Utilization</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">RSS</label>
-                                        <div id="memory-rss">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Physical Memory (RSS)</label>
+                                        <div id="memory-rss" class="fs-5">-</div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Heap Total</label>
-                                        <div id="memory-heap-total">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Heap Allocation</label>
+                                        <div id="memory-heap-total" class="fs-5">-</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">Heap Used</label>
-                                        <div id="memory-heap-used">-</div>
+                                        <label class="form-label text-muted small text-uppercase">Heap Used</label>
+                                        <div id="memory-heap-used" class="fs-5">-</div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label class="form-label text-muted">External</label>
-                                        <div id="memory-external">-</div>
+                                        <label class="form-label text-muted small text-uppercase">External</label>
+                                        <div id="memory-external" class="fs-5">-</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                
                 <div class="col-md-6">
                     <div class="card bg-dark border-secondary mb-3">
                         <div class="card-header bg-secondary text-white d-flex justify-content-between align-items-center">
-                            <h5 class="mb-0">Connected Players</h5>
+                            <div class="d-flex align-items-center">
+                                <i class="bi bi-people me-2"></i>
+                                <h5 class="mb-0">Connected Players</h5>
+                            </div>
                             <button class="btn btn-sm btn-primary" id="refresh-players">Refresh</button>
                         </div>
                         <div class="card-body">
+                            <!-- Add player list header -->
+                            <div class="d-flex justify-content-between align-items-center mb-3 player-list-header border-bottom border-secondary pb-2">
+                                <div class="d-flex align-items-center">
+                                    <span class="fw-bold ms-2 text-uppercase small">Player Name</span>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <span class="fw-bold me-2 text-uppercase small">Health</span>
+                                </div>
+                            </div>
                             <div id="player-accordion" class="accordion accordion-flush">
                                 <!-- Player entries will be added here dynamically -->
                                 <div class="text-center text-muted" id="no-players-message">
-                                    No players connected
+                                    No active players connected
                                 </div>
                             </div>
                         </div>
