--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- Add Socket.IO client library -->
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
@@ -18,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" data-bs-toggle="tab" data-bs-target="#dashboard-tab">Dashboard</a>
+                        <a class="nav-link active" href="#" data-tab-target="#dashboard-tab">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#client-tab">MUD Client</a>
+                        <a class="nav-link" href="#" data-tab-target="#client-tab">MUD Client</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -159,11 +161,26 @@
 
         <div class="tab-pane fade" id="client-tab">
             <div class="card bg-dark border-secondary mb-3">
-                <div class="card-header bg-secondary text-white">
-                    <h5>MUD Client</h5>
+                <div class="card-header bg-secondary text-white d-flex justify-content-between align-items-center">
+                    <div class="d-flex align-items-center">
+                        <i class="bi bi-display me-2"></i>
+                        <h5 class="mb-0">MUD Client</h5>
+                    </div>
+                    <div id="monitor-info" class="d-none">
+                        Monitoring: <span class="text-warning">Player</span>
+                    </div>
+                    <button id="stop-monitoring" class="btn btn-sm btn-warning d-none">
+                        <i class="bi bi-stop-circle"></i> Stop Monitoring
+                    </button>
                 </div>
                 <div class="card-body p-0">
-                    <iframe src="/index.html" style="width: 100%; height: 600px; border: none;"></iframe>
+                    <div id="monitor-terminal" class="terminal-output p-2"></div>
+                    <form id="admin-command-form" class="d-none p-2 border-top border-secondary">
+                        <div class="input-group">
+                            <input type="text" id="admin-command-input" class="form-control bg-dark text-light border-secondary" placeholder="Enter command as this user...">
+                            <button class="btn btn-outline-secondary text-light" type="submit">Send</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
