--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -34,6 +34,11 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link text-info" href="/" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Return to the main game">
+                            <i class="bi bi-arrow-left-circle me-1"></i> Back to Game
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#" id="logout-button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Log out of the admin panel">Logout</a>
                     </li>
                 </ul>
