--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -7,8 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- Add xterm.js CSS -->
+    <link rel="stylesheet" href="/node_modules/xterm/css/xterm.css">
     <!-- Add Socket.IO client library -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- Add xterm.js scripts -->
+    <script src="/node_modules/xterm/lib/xterm.js"></script>
+    <script src="/node_modules/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
+    <script src="/node_modules/xterm-addon-web-links/lib/xterm-addon-web-links.js"></script>
 </head>
 <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary">
@@ -235,7 +241,7 @@
                     </button>
                 </div>
                 <div class="card-body p-0">
-                    <div id="monitor-terminal" class="terminal-output p-2"></div>
+                    <div id="monitor-terminal" class="admin-terminal-container"></div>
                     <form id="admin-command-form" class="d-none p-2 border-top border-secondary">
                         <div class="input-group">
                             <input type="text" id="admin-command-input" class="form-control bg-dark text-light border-secondary" placeholder="Enter command as this user...">
