--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -237,6 +237,9 @@
                         Monitoring: <span class="text-warning">Player</span>
                     </div>
                     <div class="d-flex gap-2">
+                        <button id="send-admin-message" class="btn btn-sm btn-info d-none" data-bs-toggle="tooltip" data-bs-placement="left" title="Send a message to the user">
+                            <i class="bi bi-chat-text"></i> Send Message
+                        </button>
                         <button id="block-user-input" class="btn btn-sm btn-danger d-none" data-bs-toggle="tooltip" data-bs-placement="left" title="Prevent the user from entering commands">
                             <i class="bi bi-keyboard"></i> Stop User Input
                         </button>
@@ -578,6 +581,30 @@
                 <div class="modal-footer border-secondary">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-warning" id="confirm-reset-password">Reset Password</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Message Modal -->
+    <div class="modal fade" id="adminMessageModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark text-light border-secondary">
+                <div class="modal-header border-secondary">
+                    <h5 class="modal-title">Send Admin Message</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Send a message to <span id="message-player-name" class="text-warning fw-bold">Username</span>:</p>
+                    <div class="mb-3">
+                        <label for="admin-message-text" class="form-label">Message</label>
+                        <textarea class="form-control bg-dark text-light border-secondary" 
+                            id="admin-message-text" rows="4" placeholder="Type your message here..."></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer border-secondary">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-info" id="confirm-send-message">Send Message</button>
                 </div>
             </div>
         </div>
